--- a/BrandPedro.html
+++ b/BrandPedro.html
@@ -8,22 +8,132 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./asset/css/main.css">
     <link rel="stylesheet" href="./asset/css/base.css">
+    <link rel="stylesheet" href="./asset/css/pedro.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@600;700&family=Belleza&family=Cormorant+Garamond:wght@300&family=Merriweather:wght@400;700&family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./asset/font/fontawesome-free-5.15.4-web/fontawesome-free-5.15.4-web/css/all.min.css">
     <link rel="stylesheet" href="./asset/font/fontawesome-free-5.15.4-web/fontawesome-free-5.15.4-web/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./asset/jquery/Pedro.js"></script>
+    <script src="./asset/jquery/main.js"></script>
+    <link rel="stylesheet" href="/asset/css/footer.css">
+    <link rel="stylesheet" href="./asset/css/header.css">
 
 </head>
 <body>
     <div class=" app__container">
-        <header></header>
+        <header>
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-sm fixed-top navbar-light bg-dark">
+                  <div class="container-fluid ">
+                    <div class="container-fluid nav-top">
+                      <ul  class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link follow" href="#">FOLLOW US</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><ion-icon class="icon1" name="logo-facebook"></ion-icon></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><ion-icon class="icon1" name="logo-instagram"></ion-icon></ion-icon></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><ion-icon class="icon1" name="logo-twitter"></ion-icon></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><ion-icon  class="icon1" name="logo-tiktok"></ion-icon></a>
+                        </li>
+                      </ul>
+                      <a class="navbar-brand " href="#">
+                        BAGBAG
+                      </a>
+                      <ul  class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><button type="button" class="btn">EN</button></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><button type="button" class="btn"><ion-icon name="location-outline"></ion-icon></button></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><button type="button" class="btn"><ion-icon name="person-circle-outline"></ion-icon></ion-icon></button></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><form class="form-inline" action="/action_page.php">
+                            <input class="form-control mr-sm-" type="text" placeholder="Search">
+                            <button class="btn btn-success" type="submit"><ion-icon name="search-outline"></ion-icon></button>
+                          </form></a>
+                        </li>
+                      </ul>
+                    </div> 
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <div class="container-fluid nav-bottom">
+                      <div class="container-fluid">
+                      <ul  class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">NEWS</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <span  class="brand">BRAND</span>
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Pedro</a>
+                            <a class="dropdown-item" href="#">H&M</a>
+                            <a class="dropdown-item" href="#">Charles Keith</a>
+                          </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <span class="brand">MEN</span>
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Pedro</a>
+                            <a class="dropdown-item" href="#">H&M</a>
+                            <a class="dropdown-item" href="#">Charles Keith</a>
+                          </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <span class="brand">WOMEN</span>
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Pedro</a>
+                            <a class="dropdown-item" href="#">H&M</a>
+                            <a class="dropdown-item" href="#">Charles Keith</a>
+                          </div>
+                        </li>
+                        
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">GALLERY</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">ABOUT US</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">CONTACT US</a>
+                        </li>
+                      </ul>
+                      </div>
+                    </div>
+                    </div> 
+                  </div>
+                </nav>
+            </div>
+        </header>
         <div class="container__main container">
             <div class="CurrentPosition">
                 <a href="#" class ="CurrentPosition__Home"> Home </a>
@@ -37,7 +147,18 @@
                     </div>
                 </div>
             </div>    
-            <div class="container-second-row row">
+            <div class="container-second-row  brand-video">
+                <div class="brand-introduction">
+                  <h3>Why is fashion label PEDRO so worth getting?</h3>
+                  <span> Since its establishment in 2005, PEDRO currently has 110 stores worldwide and an international service network platform, and it continues to expand the market. PEDRO’s design is as unique as a work of art, yet it does not lose its versatility, making it go with different styles. One thing worth noticing is, unlike its sister brand Charles & Keith under the same group, PEDRO’s limited production also limits the possibility of outfit clashes! Make up your mind and place your order at once if you see the style you like on its the website, you won’t regret it! </span> 
+                </div>
+                <video class="row" autoplay muted>
+                    <source src="./asset/video/Pedro02.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                
+            </div>
+            <div class="container-third-row row">
                 <div class="category__filter__content col-md-3 ">
                     <div class="category__filter__box"> 
                         <h4 class="category__filter__heading">Collection</h4>
@@ -216,7 +337,60 @@
 
             </div>
         </div>
-        <footer></footer>
+        <footer>
+            <div class="container-fluid">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <div class="container-fluid footer-left">
+                        <div class="col-sm-6">
+                          <h3>Service</h3>
+                          <ul class="navbar-nav">
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Returns and Refunds</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Delivery</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Payment</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">FAQ</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <h3>Customer Care</h3>
+                          <ul class="navbar-nav">
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Store Locator</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="container-fluid footer-right">
+                        <h3>Accept Payment Methods</h3>
+                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <div class="container-fluid">
+                          <a href="#">&copy;Copyright</a>
+                          <a href="#">TERMS OF USE</a>
+                          <a href="#">COOKIES POLICY</a>
+                          <a href="#">PRIVACY POLICY</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>    
+        </footer> 
     </div>
 </body>
 </html>
