--- a/BrandPedro.html
+++ b/BrandPedro.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PEDRO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="./asset/css/main.css">
-    <link rel="stylesheet" href="./asset/css/base.css">
-    <link rel="stylesheet" href="./asset/css/pedro.css">
+    <link rel="stylesheet" href="asset/css/main.css">
+    <link rel="stylesheet" href="asset/css/base.css">
+    <link rel="stylesheet" href="asset/css/pedro.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@600;700&family=Belleza&family=Cormorant+Garamond:wght@300&family=Merriweather:wght@400;700&family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./asset/font/fontawesome-free-5.15.4-web/fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" href="asset/font/fontawesome-free-5.15.4-web/fontawesome-free-5.15.4-web/css/all.min.css">
     <link rel="stylesheet" href="asset/font/fontawesome-free-5.15.4-web/fontawesome-free-5.15.4-web/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -23,7 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./asset/jquery/main.js"></script>
+    <script src="asset/jquery/main.js"></script>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
 
@@ -142,7 +142,7 @@
             </div>
             <div class="container-first-row">
                 <div class="container-first-row brand__banner">
-                    <div class="brand__banner-img"><img src="./asset/img/banner-1940.jpg" alt="banner">
+                    <div class="brand__banner-img"><img src="asset/img/banner-1940.jpg" alt="banner">
                         
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                   <span class="brand-introduction--content"> Since its establishment in 2005, PEDRO currently has 110 stores worldwide and an international service network platform, and it continues to expand the market. PEDRO’s design is as unique as a work of art, yet it does not lose its versatility, making it go with different styles. One thing worth noticing is, unlike its sister brand Charles & Keith under the same group, PEDRO’s limited production also limits the possibility of outfit clashes! Make up your mind and place your order at once if you see the style you like on its the website, you won’t regret it! </span> 
                 </div>
                 <video class="row" autoplay muted>
-                    <source src="./asset/video/Pedro02.mp4" type="video/mp4">
+                    <source src="asset/video/Pedro02.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
                 
@@ -315,63 +315,63 @@
                     <div class="container__main_product">
                         <div class="container__main_product-row row">
                             <a href="Product22.html" class="product__item__box col-md-4 col-sm-6">
-                                <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/ShoulderBag/1.jpg" alt=""> </div>
+                                <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/ShoulderBag/1.jpg" alt=""> </div>
                                 <h4 class="product__item__box__name">Corduroy Shoulder Bag
                                 </h4>
                                 <div class="product__item__box__price">$86</div>
                             </a>
                             <a href="Product21.html" class="product__item__box col-md-4 col-sm-6">
-                                <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/ShoulderBag/2.jpg" alt=""> </div>
+                                <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/ShoulderBag/2.jpg" alt=""> </div>
                                 <h4 class="product__item__box__name">Tweed Double Flap Shoulder Bag</h4>
                                 <div class="product__item__box__price">$78</div>
                             </a>
                             <a href="Product7.html" class="product__item__box col-md-4 col-sm-6">
-                                <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/SlingPouch/A1.jpg" alt=""> </div>
+                                <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/SlingPouch/A1.jpg" alt=""> </div>
                                 <h4 class="product__item__box__name">Multipocketed Sling Pouch</h4>
                                 <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/SlingPouch/A2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/SlingPouch/A2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Pleated Sling Pouch</h4>
                               <div class="product__item__box__price">$115.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Tote/1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Tote/1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name"> Pleated Tote Bag</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Tote/2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Tote/2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Marina Tote Bag</h4>
                               <div class="product__item__box__price">$65.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Tote/2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Tote/2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Casual Tote</h4>
                               <div class="product__item__box__price">$89.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Tote/A1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Tote/A1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Nylon Monochrome Tote Bag</h4>
                               <div class="product__item__box__price">$79.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Backpacks/1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Backpacks/1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Black - Backpack with Buckled Pockets</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Backpacks/2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Backpacks/2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Chalk - Backpack with Buckled Pockets</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Backpacks/A1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Backpacks/A1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Backpack with Detachable Pouch</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Backpacks/A2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Backpacks/A2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Faux Fur Nylon Backpack</h4>
                               <div class="product__item__box__price">$65.9</div>
                             </a>
@@ -423,9 +423,9 @@
                     <div class="col-sm-6">
                       <div class="container-fluid footer-right">
                         <h3>Accept Payment Methods</h3>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
                         <div class="container-fluid">
                           <a href="#">&copy;Copyright</a>
                           <a href="#">TERMS OF USE</a>
