--- a/Men-Backpacks.html
+++ b/Men-Backpacks.html
@@ -22,7 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./asset/jquery/main.js"></script>
+    <script src="asset/jquery/main.js"></script>
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/navbar.css">
 </head>
@@ -218,34 +218,34 @@
                     <div class="container__main_product">
                         <div class="container__main_product-row row">
                             <a href="Product5.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/MEN/Backpacks/A1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/MEN/Backpacks/A1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Padded Nylon Zip Backpack</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="Product2.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Backpacks/A2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Backpacks/A2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Faux Fur Nylon Backpack</h4>
                               <div class="product__item__box__price">$65.9</div>
                             </a>
                             <a href="Product1.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Backpacks/A1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Backpacks/A1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Backpack with Detachable Pouch</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/MEN/Backpacks/A2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/MEN/Backpacks/A2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Monogram Logo Moto Flap Backpack</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             
                             
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/MEN/Backpacks/A2.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/MEN/Backpacks/A2.png" alt=""> </div>
                               <h4 class="product__item__box__name">Felt explorer backpack</h4>
                               <div class="product__item__box__price">$86</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/MEN/Backpacks/A1.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/MEN/Backpacks/A1.png" alt=""> </div>
                               <h4 class="product__item__box__name">Multi-pocket nylon backpack</h4>
                               <div class="product__item__box__price">$78</div>
                             </a>
@@ -297,9 +297,9 @@
                     <div class="col-sm-6">
                       <div class="container-fluid footer-right">
                         <h3>Accept Payment Methods</h3>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
                         <div class="container-fluid">
                           <a href="#">&copy;Copyright</a>
                           <a href="#">TERMS OF USE</a>
