--- a/Men-Tote.html
+++ b/Men-Tote.html
@@ -217,34 +217,34 @@
                     <div class="container__main_product">
                         <div class="container__main_product-row row">
                             <a href="Product13.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Tote/2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Tote/2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Casual Tote</h4>
                               <div class="product__item__box__price">$89.9</div>
                             </a>
                             <a href="Product14.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/MEN/Tote/A1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/MEN/Tote/A1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Nylon Monochrome Tote Bag</h4>
                               <div class="product__item__box__price">$79.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/MEN/Tote/200282304-1-black.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/MEN/Tote/200282304-1-black.png" alt=""> </div>
                               <h4 class="product__item__box__name">Tote bag in black organic cotton with ice t print</h4>
                               <div class="product__item__box__price">$78</div>
                             </a>
                             <a href="Product18.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/MEN/Tote/10304948-1-black.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/MEN/Tote/10304948-1-black.png" alt=""> </div>
                               <h4 class="product__item__box__name">Lightweight organic cotton tote bag in black</h4>
                               <div class="product__item__box__price">$86</div>
                             </a>
                             
                             
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/MEN/Tote/A1.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/MEN/Tote/A1.png" alt=""> </div>
                               <h4 class="product__item__box__name">Canvas maxi tote bag</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/MEN/Tote/A2.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/MEN/Tote/A2.png" alt=""> </div>
                               <h4 class="product__item__box__name">Love © pet shop boys tote bag</h4>
                               <div class="product__item__box__price">$65.9</div>
                             </a>
@@ -296,9 +296,9 @@
                     <div class="col-sm-6">
                       <div class="container-fluid footer-right">
                         <h3>Accept Payment Methods</h3>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
                         <div class="container-fluid">
                           <a href="#">&copy;Copyright</a>
                           <a href="#">TERMS OF USE</a>
