--- a/Women-Backpacks.html
+++ b/Women-Backpacks.html
@@ -23,7 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./asset/jquery/main.js"></script>
+    <script src="asset/jquery/main.js"></script>
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/navbar.css">
 </head>
@@ -220,34 +220,34 @@
                     <div class="container__main_product">
                         <div class="container__main_product-row row">
                           <a href="Product34.html" class="product__item__box col-md-4 col-sm-6">
-                            <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Backpacks/2.jpg" alt=""> </div>
+                            <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Backpacks/2.jpg" alt=""> </div>
                             <h4 class="product__item__box__name">Chalk - Backpack with Buckled Pockets</h4>
                             <div class="product__item__box__price">$85.9</div>
                           </a>
                           <a href="Product35.html" class="product__item__box col-md-4 col-sm-6">
-                            <div class="product__item__box__img"> <img src="/asset/img/ZARA/WOMEN/Backpacks/1.png" alt=""> </div>
+                            <div class="product__item__box__img"> <img src="asset/img/ZARA/WOMEN/Backpacks/1.png" alt=""> </div>
                             <h4 class="product__item__box__name">Quilted backpack with slogan</h4>
                             <div class="product__item__box__price">$78</div>
                           </a>
                           <a href="#" class="product__item__box col-md-4 col-sm-6">
-                            <div class="product__item__box__img"> <img src="/asset/img/ZARA/WOMEN/Backpacks/2.png" alt=""> </div>
+                            <div class="product__item__box__img"> <img src="asset/img/ZARA/WOMEN/Backpacks/2.png" alt=""> </div>
                             <h4 class="product__item__box__name">Patchwork backpack</h4>
                             <div class="product__item__box__price">$86</div>
                           </a>
                           
                           
                           <a href="#" class="product__item__box col-md-4 col-sm-6">
-                            <div class="product__item__box__img"> <img src="/asset/img/C&K/WOMEN/Backpacks/1.jpg" alt=""> </div>
+                            <div class="product__item__box__img"> <img src="asset/img/C&K/WOMEN/Backpacks/1.jpg" alt=""> </div>
                             <h4 class="product__item__box__name">Quilted Double Zip Backpack</h4>
                             <div class="product__item__box__price">$79.9</div>
                           </a>
                           <a href="#" class="product__item__box col-md-4 col-sm-6">
-                            <div class="product__item__box__img"> <img src="/asset/img/C&K/WOMEN/Backpacks/2.jpg" alt=""> </div>
+                            <div class="product__item__box__img"> <img src="asset/img/C&K/WOMEN/Backpacks/2.jpg" alt=""> </div>
                             <h4 class="product__item__box__name">Genevieve Two-Tone Printed Tassel Backpack</h4>
                             <div class="product__item__box__price">$89.9</div>
                           </a>
                           <a href="#" class="product__item__box col-md-4 col-sm-6">
-                            <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Backpacks/1.jpg" alt=""> </div>
+                            <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Backpacks/1.jpg" alt=""> </div>
                             <h4 class="product__item__box__name">Black - Backpack with Buckled Pockets</h4>
                             <div class="product__item__box__price">$85.9</div>
                           </a>
@@ -298,9 +298,9 @@
                     <div class="col-sm-6">
                       <div class="container-fluid footer-right">
                         <h3>Accept Payment Methods</h3>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
                         <div class="container-fluid">
                           <a href="#">&copy;Copyright</a>
                           <a href="#">TERMS OF USE</a>
