--- a/Women-ToteBags.html
+++ b/Women-ToteBags.html
@@ -23,7 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./asset/jquery/main.js"></script>
+    <script src="asset/jquery/main.js"></script>
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/navbar.css">
 </head>
@@ -220,33 +220,33 @@
                     <div class="container__main_product">
                         <div class="container__main_product-row row">
                             <a href="Product25.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/WOMEN/Tote/1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/WOMEN/Tote/1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Huxley Trapeze Tote Bag</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/WOMEN/Tote/2.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/WOMEN/Tote/2.png" alt=""> </div>
                               <h4 class="product__item__box__name">Nylon tote bag with handles at the front</h4>
                               <div class="product__item__box__price">$115.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/WOMEN/Tote/1.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/WOMEN/Tote/1.png" alt=""> </div>
                               <h4 class="product__item__box__name">Mini nylon tote bag</h4>
                               <div class="product__item__box__price">$78</div>
                             </a>
                             
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/WOMEN/Tote/2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/WOMEN/Tote/2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Chiffon Scarf Tote Bag</h4>
                               <div class="product__item__box__price">$115</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Tote/1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Tote/1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name"> Pleated Tote Bag</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/Tote/2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/Tote/2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Marina Tote Bag</h4>
                               <div class="product__item__box__price">$65.9</div>
                             </a>
@@ -297,9 +297,9 @@
                     <div class="col-sm-6">
                       <div class="container-fluid footer-right">
                         <h3>Accept Payment Methods</h3>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
                         <div class="container-fluid">
                           <a href="#">&copy;Copyright</a>
                           <a href="#">TERMS OF USE</a>
