--- a/SignUp.html
+++ b/SignUp.html
@@ -23,9 +23,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js" ></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/asset/jquery/form.js"></script>
-
-  <script src="./asset/jquery/form.js"></script>
+  <script src="asset/jquery/form.js"></script>
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/navbar.css">
 
@@ -185,7 +183,7 @@
                 </div>
               </form> 
               <div class="auth-form__img">
-                <img src="./asset/img/Form/auth form.png" alt="background">
+                <img src="asset/img/Form/auth form.png" alt="background">
               </div> 
           </div>  
       </div> 
@@ -230,9 +228,9 @@
                 <div class="col-sm-6">
                   <div class="container-fluid footer-right">
                     <h3>Accept Payment Methods</h3>
-                    <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                    <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                    <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                    <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                    <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                    <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
                     <div class="container-fluid">
                       <a href="#">&copy;Copyright</a>
                       <a href="#">TERMS OF USE</a>
