--- a/Women-ShoulderBags.html
+++ b/Women-ShoulderBags.html
@@ -23,7 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./asset/jquery/main.js"></script>
+    <script src="asset/jquery/main.js"></script>
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/navbar.css">
 </head>
@@ -220,33 +220,33 @@
                     <div class="container__main_product">
                         <div class="container__main_product-row row">
                             <a href="Product23.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/WOMEN/ShoulderBag/1.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/WOMEN/ShoulderBag/1.png" alt=""> </div>
                               <h4 class="product__item__box__name">Quilted leather bag with chain</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="Product19.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/WOMEN/ShoulderBag/2.jpg" alt=""></div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/WOMEN/ShoulderBag/2.jpg" alt=""></div>
                               <h4 class="product__item__box__name">Tiger Calligraphy Chain Bag</h4>
                               <div class="product__item__box__price">$85.9</div>
                             </a>
                             <a href="Product20.html" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/C&K/WOMEN/ShoulderBag/1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/C&K/WOMEN/ShoulderBag/1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Mini Gabine Saddle Bag</h4>
                               <div class="product__item__box__price">$65.9</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/ZARA/WOMEN/ShoulderBag/2.png" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/ZARA/WOMEN/ShoulderBag/2.png" alt=""> </div>
                               <h4 class="product__item__box__name">Braided shoulder bag</h4>
                               <div class="product__item__box__price">$115.9</div>
                             </a>
                             
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/ShoulderBag/1.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/ShoulderBag/1.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Tweed Double Flap Shoulder Bag</h4>
                               <div class="product__item__box__price">$78</div>
                             </a>
                             <a href="#" class="product__item__box col-md-4 col-sm-6">
-                              <div class="product__item__box__img"> <img src="/asset/img/PEDRO/WOMEN/ShoulderBag/2.jpg" alt=""> </div>
+                              <div class="product__item__box__img"> <img src="asset/img/PEDRO/WOMEN/ShoulderBag/2.jpg" alt=""> </div>
                               <h4 class="product__item__box__name">Corduroy Shoulder Bag</h4>
                               <div class="product__item__box__price">$86</div>
                             </a>
@@ -297,9 +297,9 @@
                     <div class="col-sm-6">
                       <div class="container-fluid footer-right">
                         <h3>Accept Payment Methods</h3>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
-                        <a href="#"><img src="/asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
+                        <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
                         <div class="container-fluid">
                           <a href="#">&copy;Copyright</a>
                           <a href="#">TERMS OF USE</a>
