--- a/Index.html
+++ b/Index.html
@@ -172,7 +172,7 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
           <div class="text">
-          <a href="#">SHOP MEN</a>
+          <a href="Men.html">SHOP MEN</a>
           </div>
           <a href="#"><img src="images/men.jpg" alt="men" width="100%"></a>
         </div>
@@ -184,7 +184,7 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
           <div class="text">
-          <a href="#">SHOP WOMEN</a>
+          <a href="Women.html">SHOP WOMEN</a>
           </div>
           <a href="#"><img src="images/women.jpg" alt="men" width="100%"></a>
         </div>
@@ -208,23 +208,23 @@
               <div class="row">
                 <div class="col-sm-4 col-xs-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p81.jpg" alt="product1" width="100%"></a>
-                    <a href="#"><b>PEDRO Pleated Sling Pouch - Black</b></a> <br>
-                    <a href="#">$115.9</a>
+                    <a href="product21.html"><img src="images/p111.jpg" alt="product1" width="100%"></a>
+                    <a href="product21.html"><b>Tweed Double Flap Shoulder Bag - Pink</b></a> <br>
+                    <a href="product21.html">$78</a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-xs-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p71.jpg" alt="product2" width="100%"></a>
-                    <a href="#"><b>Multipocketed Sling Pouch - Black</b></a> <br>
-                    <a href="#">$85.9</a>
+                    <a href="product20.html"><img src="images/p181.jpg" alt="product2" width="100%"></a>
+                    <a href="product20.html"><b>Mini Gabine Saddle Bag - Mustard</b></a> <br>
+                    <a href="product20.html">$65.9</a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-xs-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p61.jpg" alt="product3" width="100%"></a>
-                    <a href="#"><b>Textured Leather Briefcase - Navy</b></a> <br>
-                    <a href="#">$97.9</a>
+                    <a href="product2.html"><img src="images/p21.jpg" alt="product3" width="100%"></a>
+                    <a href="product2.html"><b>Faux Fur Nylon Backpack - Navy</b></a> <br>
+                    <a href="product2.html">$65.9</a>
                   </div>
                 </div>
               </div>
@@ -235,23 +235,23 @@
               <div class="row">
                 <div class="col-sm-4 col-xs-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p51.jpg" alt="product3" width="100%"></a>
-                    <a href="#"><b>Crossbody Bag with Mini Pouch - White</b></a> <br>
-                    <a href="#">$56.6</a>
+                    <a href="product19.html"><img src="images/p171.jpg" alt="product3" width="100%"></a>
+                    <a href="product19.html"><b>Tiger Calligraphy Chain Handle Shoulder Bag - Taupe</b></a> <br>
+                    <a href="product19.html">$85.9</a>
                 </div>
                 </div>
                 <div class="col-sm-4 col-xs-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p41.jpg" alt="product4" width="100%"></a>
-                    <a href="#"><b>Shoulder Bag with Scarf Handle - Chalk</b></a> <br>
-                    <a href="#">$109.2</a>
+                    <a href="product18.html"><img src="images/p181.jpg" alt="product4" width="100%"></a>
+                    <a href="product18.html"><b>Mini Gabine Saddle Bag - Mustard</b></a> <br>
+                    <a href="product18.html">$65.9</a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-xs-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p31.jpg" alt="product5" width="100%"></a>
-                    <a href="#"><b>Nylon Backpack - Multi</b></a> <br>
-                    <a href="#">$35.8</a>
+                    <a href="product14.html"><img src="images/p101.jpg" alt="product5" width="100%"></a>
+                    <a href="product14.html"><b>Nylon Monochrome Tote Bag - Military Green</b></a> <br>
+                    <a href="product14.html">$75.9</a>
                   </div>
                 </div>
               </div>
@@ -262,23 +262,23 @@
               <div class="row">
                 <div class="col-sm-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p11.jpg" alt="product3" width="100%"></a>
-                    <a href="#"><b>Backpack with Detachable Pouch - White</b></a> <br>
-                    <a href="#">$85.9</a>
+                    <a href="Product1.html"><img src="images/p11.jpg" alt="product3" width="100%"></a>
+                    <a href="Product1.html"><b>Backpack with Detachable Pouch - White</b></a> <br>
+                    <a href="Product1.html">$85.9</a>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p21.jpg" alt="product4" width="100%"></a>
-                    <a href="#"><b>Faux Fur Nylon Backpack - Navy</b></a> <br>
-                    <a href="#">$65.9</a>
+                    <a href="product12.html"><img src="images/p201.jpg" alt="product4" width="100%"></a>
+                    <a href="product12.html"><b>Performance Striped Logo Duffle Bag</b></a> <br>
+                    <a href="product12.html">$115</a>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="thumbnail">
-                    <a href="#"><img src="images/p41.jpg" alt="product5" width="100%"></a>
-                    <a href="#"><b>Shoulder Bag with Scarf Handle - Chalk</b></a> <br>
-                    <a href="#">$109.2</a>
+                    <a href="product13.html"><img src="images/p91.jpg" alt="product5" width="100%"></a>
+                    <a href="product13.html"><b>Casual Tote - Black</b></a> <br>
+                    <a href="product13.html">$89.9</a>
                   </div>
                 </div>
               </div>
